# fpl-rs

./: Cargo.toml  README.md
src/: fpl_error.rs  lib.rs
src/models/: bootstrap_static.rs  classic_league.rs  fixture.rs  gameweek.rs  h2h_league.rs  league.rs  mod.rs  transfer.rs  user.rs  user_picks.rs
